--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "GuardainApp",
-    "slug": "GuardainApp",
+    "name": "VanGuardian",
+    "slug": "VanGuardian",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -11,9 +11,8 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
+    "assets": ["assets/logo.png"],
     "ios": {
       "supportsTablet": true
     },
