--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
+    "expo-notifications": "~0.20.1",
+    "native-notify": "^4.0.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-modal": "^13.0.1",
